Add while step runtime support (#147)
* add while step runtime to support while loop

* address the comments

* fix batch loading rollup